--- a/taskbuster/templates/base.html
+++ b/taskbuster/templates/base.html
@@ -1,5 +1,5 @@
-{% load staticfiles %}
 <!doctype html>
+{% load staticfiles %}
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
@@ -10,12 +10,12 @@
 	<title>{% block head_title %}{% endblock head_title %}</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
 	<style>
 		body {
-				padding-top: 50px;
-				padding-bottom: 20px;
+			padding-top: 50px;
+			padding-bottom: 20px;
 		}
 	</style>
 
